# building_software

./: Analysis.py  LICENSE  README.md  Test.md  commands_for_executions.txt  expected_results.xlsx  job_config.yaml  pyproject.toml  sample_data.xlsx  sstore.xlsx  teams.txt  test_Analysis.py  user_config.yaml
Analysis-package/: pyproject.toml
Analysis/analysis/: LICENSE.txt  README.md  pyproject.toml
Analysis/analysis/src/analysis/: __about__.py
analysis/tests/: __init__.py
