[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "analysis_package"
version = "0.1.0"
description = "building Software assignment"
authors = ["Junaid <junaidfazam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pyyaml = "^5.4.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"