[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name = "analysis_package"
version = "0.1.0"
description = "building Software assignment"
dependencies = ["matplotlib", "numpy","argparse","seaborn","yaml","logging","requests"]
authors = "Junaid Azam"
email = "junaidfazam@gmail.com"
license = "MIT"
python-requires = ">=3.6"