[tool.poetry]
name = "analysis-package"
version = "0.1.0"
description = ""
authors = ["Junaid Azam <junaidfazam@gmail.com>"]
readme = "README.md"
packages = [{include = "analysis_package"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
